--- a/src/app/ui/blocks/requests-list/requests-list.component.scss
+++ b/src/app/ui/blocks/requests-list/requests-list.component.scss
@@ -4,4 +4,9 @@
   display: flex;
   flex-direction: column;
   gap: styles.$box-pad-onehalf;
+
+  &__notfound {
+    padding: styles.func-toRem(0.6);
+    text-align: center;
+  }
 }
