--- a/src/app/ui/forms/form/form.component.html
+++ b/src/app/ui/forms/form/form.component.html
@@ -10,7 +10,7 @@
     ></mr-form-fields>
   </fieldset>
   <mr-button 
-    [label]="'Guardar'"
+    [label]="'Enviar'"
     [isDisabled]="form.formGroup.invalid || form.formGroup.disabled"
     (clicked)="manualSave$.next()"
   ></mr-button>
