Form's description was added

--- a/src/app/ui/forms/form-forms-requests/form-forms-requests.component.html
+++ b/src/app/ui/forms/form-forms-requests/form-forms-requests.component.html
@@ -30,6 +30,11 @@
     [formControlName]="form.formControlNames.channel"
   ></mr-sub-form-select>
 
+  <mr-sub-form-textarea 
+    [text]="'Descripción'"
+    [formControlName]="form.formControlNames.description"
+  ></mr-sub-form-textarea>
+
   <fieldset class="form-forms-requests__section form-forms-requests__section--columness">
     <mr-form-fields
       [formControlName]="form.formControlNames.fields"
