--- a/src/app/ui/blocks/notices-content/notices-content.component.scss
+++ b/src/app/ui/blocks/notices-content/notices-content.component.scss
@@ -164,6 +164,11 @@ a {
         font-size: styles.func-toRem(1.20);
       }
     }
+
+    &__filters {
+      flex-direction: column;
+      gap: styles.func-toRem(0.7);
+    }
   }
 }
 
