--- a/src/app/ui/blocks/pagination/pagination.component.html
+++ b/src/app/ui/blocks/pagination/pagination.component.html
@@ -1,3 +1,3 @@
 <ng-container>
-  <div class="pagination" id="pagination"><ul></ul></div>
+  <div class="pagination" id="pagination"><ul id="pagination-ul"></ul></div>
 </ng-container>
