--- a/src/app/ui/blocks/pagination/pagination.component.scss
+++ b/src/app/ui/blocks/pagination/pagination.component.scss
@@ -26,6 +26,7 @@
     user-select: none;
     transition: all 0.3s ease;
     @include styles.font-base;
+    margin: styles.$box-mrg-none 0.125rem;
 
     &.numb {
       list-style: none;
