--- a/src/app/ui/blocks/admin-users-list/admin-users-list.component.html
+++ b/src/app/ui/blocks/admin-users-list/admin-users-list.component.html
@@ -116,6 +116,7 @@
       [stratum]="stratum"
       [sustenting]="sustenting"
       [canResetForm]="canCloseModal"
+      [showCheckConditions]="true"
       (dataOutput)="handleCreateUser($event)"
       (formUpdate)="handleSelectState($event)"
     ></mr-form-user>
