--- a/src/app/ui/blocks/notice-info/notice-info.component.scss
+++ b/src/app/ui/blocks/notice-info/notice-info.component.scss
@@ -72,7 +72,7 @@
       position: relative;
       width: 100%;
       background: styles.$color-primary-color-light;
-      padding: styles.$box-pad-base;
+      padding: styles.$box-pad-half;
 
       &--network {
         background-color: styles.$color-status-info-dark;
