--- a/src/app/ui/elements/tab-buttons/tab-buttons.component.scss
+++ b/src/app/ui/elements/tab-buttons/tab-buttons.component.scss
@@ -3,8 +3,15 @@
 .tab-buttons {
   display: grid;
   gap: styles.$box-pad-base;
-  grid-template-columns: repeat(4, styles.$box-fr-base);
+  grid-template-columns: repeat(2, styles.$box-fr-base);
   justify-content: center;
   align-items: center;
   width: 100%;
+}
+
+
+@media (min-width: styles.$bkp-tablet) {
+  .tab-buttons {
+    grid-template-columns: repeat(4, styles.$box-fr-base);
+  }
 }
