--- a/src/app/ui/blocks/admin-users-list/admin-users-list.component.scss
+++ b/src/app/ui/blocks/admin-users-list/admin-users-list.component.scss
@@ -22,8 +22,7 @@
 .admin-users-list {
   &__head {
     display: flex;
-    justify-content: flex-start;
-    align-items: center;
+    flex-direction: column;
     gap: 5px;
   }
   
@@ -58,6 +57,17 @@
         width: styles.func-toRem(3) !important;
         font-size: styles.func-toRem(1.20);
       }
+    }
+  }
+}
+
+@media (min-width: styles.$bkp-tablet) {
+  .admin-users-list {
+    &__head {
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-start;
+      align-items: center;
     }
   }
 }
