--- a/src/app/ui/blocks/admin-users-list/admin-users-list.component.html
+++ b/src/app/ui/blocks/admin-users-list/admin-users-list.component.html
@@ -116,6 +116,7 @@
       [stratum]="stratum"
       [sustenting]="sustenting"
       [canResetForm]="canCloseModal"
+      [disclosures]="disclosures"
       [showCheckConditions]="true"
       (dataOutput)="handleCreateUser($event)"
       (formUpdate)="handleSelectState($event)"
@@ -140,6 +141,7 @@
       [stratum]="stratum"
       [sustenting]="sustenting"
       [canResetForm]="canCloseModal"
+      [disclosures]="disclosures"
       (formUpdate)="handleSelectState($event)"
       (initForm)="handleSelectState($event)"
       (dataOutput)="handleUpdateUser($event)"
