--- a/src/app/ui/blocks/register-content/register-content.component.html
+++ b/src/app/ui/blocks/register-content/register-content.component.html
@@ -16,6 +16,7 @@
         [maritalStatus]="maritalStatus"
         [stratum]="stratum"
         [sustenting]="sustenting"
+        [disclosures]="disclosures"
         (dataOutput)="handleCreateUser($event)"
         (formUpdate)="handleLoadCities($event)"
       ></mr-form-user>
