--- a/src/app/ui/_styles/_box-model.scss
+++ b/src/app/ui/_styles/_box-model.scss
@@ -64,3 +64,6 @@ $hht-floating-card: $_pad-base*20;
 
 // Column list
 $wth-column-list: $_pad-base * 10;
+
+// Dropdown height
+$hht-dropdown-input: $_pad-base * 1.15;
