--- a/src/app/ui/forms/form-users-filter/form-users-filter.component.html
+++ b/src/app/ui/forms/form-users-filter/form-users-filter.component.html
@@ -5,7 +5,7 @@
       [options]="options"
       [label]="'Ciudad'"
       [icon]="'fas fa-sort'"
-      [formControlName]="form.formControlNames.value"
+      [formControlName]="form.formControlNames.city"
     ></mr-sub-form-select> 
   </div>
 </form>
