--- a/src/app/ui/forms/form-users-search/form-users-search.component.html
+++ b/src/app/ui/forms/form-users-search/form-users-search.component.html
@@ -1,6 +1,6 @@
 <form class="form-user-filter" [formGroup]="form.formGroup">
   <mr-sub-form-input
     [placeholder]="'Buscar...'"
-    [formControlName]="form.formControlNames.value"
+    [formControlName]="form.formControlNames.firstName"
   ></mr-sub-form-input>
 </form>
