Pagination for directory

--- a/src/app/shared/notices/notices-content-container/notices-content-container.component.html
+++ b/src/app/shared/notices/notices-content-container/notices-content-container.component.html
@@ -2,7 +2,9 @@
   notice: (notice$ | async),
   channel: (channel$ | async),
   users: (users$ | async),
-  cities: (cities$ | async)
+  cities: (cities$ | async),
+  filter: (filter$ | async),
+  totalUsers: (totalUsers$ | async)
 } as data">
   <mr-notices-content
     *ngIf="data.notice"
@@ -10,8 +12,8 @@
     [channel]="data.channel"
     [users]="data.users"
     [cities]="data.cities"
-    (changePagePaginated)="loadUsers($event)"
-    (filterByCity)="handleFilterByCity($event)"
-    (filterByName)="handleFilterByName($event)"
+    [filter]="data.filter"
+    [totalUsers]="data.totalUsers"
+    (filteredUsers)="filterUsers($event)"
   ></mr-notices-content>
 </ng-container>
