--- a/src/app/ui/_styles/_box-model.scss
+++ b/src/app/ui/_styles/_box-model.scss
@@ -67,3 +67,7 @@ $wth-column-list: $_pad-base * 10;
 
 // Dropdown height
 $hht-dropdown-input: $_pad-base * 1.15;
+
+// Pagination
+$mrg-pagination: $_pad-base * 0.125;
+$icon-pagination: $_pad-base * 0.75;
