--- a/src/app/ui/_styles/_colors.scss
+++ b/src/app/ui/_styles/_colors.scss
@@ -42,6 +42,7 @@ $status-error: $_orange-0;
 $status-error-dark: $_orange-10;
 
 $bor-light: $_neutral-10;
+$bor: $_neutral-20;
 
 $typo-base: $_neutral-40;
 $typo-light: $_neutral-30;
