--- a/src/app/ui/blocks/notices-content/notices-content.component.html
+++ b/src/app/ui/blocks/notices-content/notices-content.component.html
@@ -117,7 +117,11 @@
         </ng-template>
       </ng-container>
 
-      <mr-pagination [totalUsers]="pages" (changePagePaginated)="filterUsers($event)"></mr-pagination>
+      <mr-pagination
+        [totalPages]="pages"
+        [currentPage]="filter.currentPage"
+        (changePage)="filterUsers($event)"
+      ></mr-pagination>
     </div>
   </mr-card>
 
