--- a/src/app/ui/blocks/notice-info/notice-info.component.scss
+++ b/src/app/ui/blocks/notice-info/notice-info.component.scss
@@ -24,6 +24,11 @@
     }
   }
 
+  &__pdf {
+    width: 100%;
+    height: 100vh;
+  }
+
   &__text {
     .text {
       color: styles.$color-bg-white !important;
@@ -105,7 +110,7 @@
       justify-content: center;
       flex-direction: column;
       text-align: center;
-      width: 50%;
+      width: 80%;
     }
   }
 
